@@ -5,6 +5,10 @@
 
   13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
   modules/catalyst/target/generic_stage.py, modules/catalyst/util.py:
+  Add catalyst.util.copy() helper function and use it
+
+  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
+  modules/catalyst/target/generic_stage.py, modules/catalyst/util.py:
   Create catalyst.util.mkdir() helper function and use it
 
   13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
